# webtoon-tracker-flask-poetry

./: .gitignore  api.py  app.py  base_config.py  pyproject.toml  validation_script.py
client/: babel.config.json  package.json  webpack.config.js
client/src/: App.js  index.html  index.js
client/src/action-creators/: webtoons.js
client/src/api/: webtoons.js
client/src/components/Checkbox/: index.js
client/src/components/ListCheckboxes/: index.js
client/src/components/ListTextInputs/: index.js
client/src/components/Modal/: Modal.css  index.js
client/src/components/Table/: index.js
client/src/components/TextInput/: index.js
client/src/hooks/: usePrevState.js
client/src/pages/: Form.js  Home.js
client/src/reducers/: index.js  webtoons.js
services/: webtoons.py
tests/: test_webtoon_tracker_flask_poetry.py
utils/: exceptions.py  views.py
views/: webtoons.py
